--- a/src/blocks/Registration-page/Registration-page.scss
+++ b/src/blocks/Registration-page/Registration-page.scss
@@ -5,17 +5,8 @@
   background-origin: content-box;
   background-position: center;
   &__main {
-    margin: rem(20) 0;
+    margin: 20px 0;
     display: flex;
     justify-content: center;
-  }
-  &__description {
-    text-align: right;
-    padding-bottom: rem(20);
-    white-space: pre-wrap;
-    font-size: rem(14);
-    line-height: rem(24);
-    color: $ds75;
-    align-self: flex-end;
   }
 }
