--- a/src/blocks/logo/logo.scss
+++ b/src/blocks/logo/logo.scss
@@ -2,13 +2,13 @@
   position: absolute;
   top: 30px;
   left: 30px;
-  max-width: rem(48);
-  max-height: rem(48);
+  max-width: 48px;
+  max-height: 48px;
   &_colored {
     position: initial;
     width: 100%;
     height: 100%;
-    max-width: rem(40);
-    max-width: rem(105);
+    max-width: 40px;
+    max-width: 105px;
   }
 }
