--- a/src/blocks/Filter-page/Filter-page.scss
+++ b/src/blocks/Filter-page/Filter-page.scss
@@ -3,7 +3,7 @@
     border-bottom: 1px solid rgba(31, 32, 65, 0.25);
   }
   &__content {
-    padding: rem(30) 0 rem(70);
+    padding: 30px 0 70px;
     display: flex;
     @media (max-width: $smDesktopWidth) {
       display: flex;
@@ -13,36 +13,43 @@
   }
   &__form {
     max-width: 266px;
-    margin-right: rem(60);
+    margin-bottom: 60px;
   }
   &__form-input {
     min-width: 100%;
   }
   &__form-block {
     &_margin-20 {
-      margin-bottom: rem(15);
+      margin-bottom: 15px;
     }
     &_margin-30 {
-      margin-bottom: rem(28);
+      margin-bottom: 28px;
     }
   }
   &__range-description {
-    padding-top: rem(10);
-    font-size: rem(12);
-    line-height: rem(14);
+    padding-top: 10px;
+    font-size: 12px;
+    line-height: 14px;
     color: $ds50;
+    @media (max-width: $phoneWidth) {
+      font-size: 10px;
+    }
   }
   &__rooms-title {
     @include MontBold;
-    font-size: rem(24);
-    line-height: rem(29);
-    margin-bottom: rem(20);
+    font-size: 24px;
+    line-height: 29px;
+    margin-bottom: 20px;
+    @media (max-width: $phoneWidth) {
+      font-size: 20px;
+      line-height: 25px;
+    }
   }
   &__rooms {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-row-gap: rem(20);
-    grid-column-gap: rem(12);
+    grid-row-gap: 20px;
+    grid-column-gap: 12px;
     @media (max-width: $desktopWidth) {
       grid-template-columns: 1fr 1fr 1fr;
     }
@@ -52,7 +59,7 @@
     @media (max-width: $smDesktopWidth) {
       grid-template-columns: 1fr 1fr;
     }
-    @media (max-width: $phoneWidth) {
+    @media (max-width: $tableWidth) {
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -64,6 +71,6 @@
   &__pagination {
     display: flex;
     justify-content: center;
-    margin: rem(40) 0 rem(70);
+    margin: 40px 0 70px;
   }
 }
