--- a/src/blocks/advantages/advantages.scss
+++ b/src/blocks/advantages/advantages.scss
@@ -7,10 +7,16 @@
     border-bottom: 1px solid rgba(31, 32, 65, 0.1);
     position: relative;
     &:not(:first-child) {
-      margin-top: rem(20);
+      margin-top: 20px;
+      @media (max-width: $phoneWidth) {
+        margin-top: 10px;
+      }
     }
     &:not(:last-child) {
-      padding-bottom: rem(20);
+      padding-bottom: 20px;
+      @media (max-width: $phoneWidth) {
+        padding-bottom: 10px;
+      }
     }
     &:last-child {
       border-bottom: none;
@@ -25,18 +31,29 @@
   &__text {
     display: inline-flex;
     flex-direction: column;
-    line-height: rem(24);
+    line-height: 24px;
     white-space: pre-wrap;
     margin-left: 55px;
+    max-width: 200px;
+    @media (max-width: $phoneWidth) {
+      line-height: 20px;
+      margin-left: 45px;
+    }
   }
   &__head {
     @include MontBold;
-    font-size: rem(14);
+    font-size: 14px;
     display: inline-block;
+    @media (max-width: $phoneWidth) {
+      font-size: 12px;
+    }
   }
   &__description {
     @include Mont;
-    font-size: rem(14);
+    font-size: 14px;
     color: $ds75;
+    @media (max-width: $phoneWidth) {
+      font-size: 12px;
+    }
   }
 }
