--- a/src/blocks/bullet-list/bullet-list.scss
+++ b/src/blocks/bullet-list/bullet-list.scss
@@ -3,7 +3,10 @@
   &__li {
     display: flex;
     align-items: flex-start;
-    margin-bottom: rem(10);
+    margin-bottom: 10px;
+    @media (max-width: $phoneWidth) {
+      margin-bottom: 5px;
+    }
     &:last-child {
       margin-bottom: 0;
     }
@@ -16,16 +19,23 @@
       min-width: 10px;
       background-color: $ds25;
       border-radius: 50%;
-      margin-right: rem(10);
-      margin-top: rem(5);
+      margin-right: 10px;
+      margin-top: 5px;
+      @media (max-width: $phoneWidth) {
+        margin-right: 5px;
+      }
     }
   }
   &__text {
     @include Mont;
-    font-size: rem(14);
+    font-size: 14px;
     color: $ds75;
     white-space: pre;
-    line-height: rem(24);
+    line-height: 24px;
     white-space: pre-wrap;
+    @media (max-width: $phoneWidth) {
+      font-size: 12px;
+      line-height: 20px;
+    }
   }
 }
