--- a/src/blocks/card-book/card-book.scss
+++ b/src/blocks/card-book/card-book.scss
@@ -1,87 +1,120 @@
 .card-book {
   background-color: $white;
   border: 1px solid rgba(0, 0, 0, 0.12);
-  box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 0 25px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   max-width: 380px;
-  @media (min-width: $phoneWidth) {
-    min-width: 380px;
-  }
+  min-width: 380px;
   @media (max-width: $phoneWidth) {
-    max-width: 320px;
+    min-width: 300px;
   }
   &__content {
-    padding: rem(40) rem(30) rem(30);
+    padding: 40px 30px 40px;
+    @media (max-width: $phoneWidth) {
+      padding: 30px 20px 30px;
+    }
   }
   &__head {
     display: flex;
     justify-content: space-between;
     align-items: flex-end;
     @include MontBold;
-    margin-bottom: rem(20);
-    line-height: rem(17);
+    margin-bottom: 20px;
+    line-height: 17px;
+    @media (max-width: $phoneWidth) {
+      margin-bottom: 15px;
+      line-height: 13px;
+    }
   }
   &__block {
-    margin-bottom: rem(15);
+    margin-bottom: 15px;
     &:last-child {
       margin-bottom: 0;
     }
   }
   &__number {
-    font-size: rem(14);
+    font-size: 14px;
+    @media (max-width: $phoneWidth) {
+      font-size: 12px;
+    }
   }
   &__head-num {
-    font-size: rem(24);
-    line-height: rem(30);
+    font-size: 24px;
+    line-height: 30px;
+    @media (max-width: $phoneWidth) {
+      font-size: 20px;
+      line-height: 15px;
+    }
   }
   &__type {
-    font-size: rem(14);
-    line-height: rem(15);
+    font-size: 14px;
+    line-height: 15px;
     color: $purple;
+    @media (max-width: $phoneWidth) {
+      font-size: 12px;
+    }
   }
   &__head-price {
     @include Mont;
-    font-size: rem(12);
+    font-size: 12px;
     color: $ds50;
-    line-height: rem(18);
+    line-height: 18px;
+    @media (max-width: $phoneWidth) {
+      font-size: 12px;
+      line-height: 15px;
+    }
   }
   &__head-sum {
-    font-size: rem(14);
+    font-size: 14px;
     @include MontBold;
+    @media (max-width: $phoneWidth) {
+      font-size: 12px;
+    }
   }
   &__calculation {
-    font-size: rem(14);
+    font-size: 14px;
     color: $ds75;
-    margin-bottom: rem(25);
+    margin-bottom: 25px;
+    @media (max-width: $phoneWidth) {
+      font-size: 12px;
+      margin-bottom: 20px;
+    }
   }
   &__calc-item {
     display: flex;
     align-items: flex-start;
     white-space: pre;
-    margin-bottom: rem(10);
-    line-height: rem(24);
+    margin-bottom: 10px;
+    line-height: 24px;
+    @media (max-width: $phoneWidth) {
+      margin-bottom: 5px;
+      line-height: 20px;
+    }
   }
   &_calc-option {
     display: inline-block;
     max-width: 215px;
   }
   &__calc-info {
-    margin-left: rem(5);
+    margin-left: 5px;
     display: flex;
     justify-content: center;
     align-items: center;
-    max-width: rem(20);
-    max-height: rem(20);
-    min-width: rem(20);
+    max-width: 20px;
+    max-height: 20px;
+    min-width: 20px;
     border: 1px solid $ds25;
     border-radius: 50%;
     color: $ds25;
+    @media (max-width: $phoneWidth) {
+      margin-left: 3px;
+    }
   }
   &__calc-sum {
     margin-left: auto;
   }
   &__calc-total {
-    line-height: rem(12);
+    line-height: 12px;
     display: flex;
   }
   &__dotted-line {
@@ -89,12 +122,12 @@
     width: 100%;
     max-width: 70%;
     border-bottom: 1px dotted $ds50;
-    margin-left: rem(5);
-    margin-right: rem(5);
+    margin-left: 5px;
+    margin-right: 5px;
   }
   &__calc-total {
     @include MontBold;
-    margin-bottom: rem(25);
+    margin-bottom: 25px;
   }
   &__total-price {
     margin-left: auto;
