--- a/src/blocks/card-room/card-room.scss
+++ b/src/blocks/card-room/card-room.scss
@@ -4,7 +4,7 @@
   max-width: 270px;
   min-width: 270px;
   border-radius: 4px;
-  box-shadow: 0px 10px 20px rgba(31, 32, 65, 0.05);
+  box-shadow: 0 10px 20px rgba(31, 32, 65, 0.05);
   box-sizing: content-box;
   overflow: hidden;
   &__slider {
@@ -23,23 +23,23 @@
   }
   &__pagination {
     text-align: right;
-    padding-right: rem(15);
+    padding-right: 15px;
   }
   .swiper-pagination-bullet {
     opacity: 1;
     background: none;
     border: 1px solid $white;
-    box-shadow: 0px 5px 5px rgba(31, 32, 65, 0.1);
+    box-shadow: 0 5px 5px rgba(31, 32, 65, 0.1);
     margin-right: 0;
   }
   .swiper-pagination-bullet-active {
     background: $white;
     border: 1px solid $white;
-    box-shadow: 0px 5px 5px rgba(31, 32, 65, 0.3);
+    box-shadow: 0 5px 5px rgba(31, 32, 65, 0.3);
   }
   .swiper-container-horizontal > .swiper-pagination-bullets .swiper-pagination-bullet {
     margin: 0;
-    margin-right: rem(3.75);
+    margin-right: 3.75px;
     &:last-child {
       margin-right: 0;
     }
@@ -52,7 +52,7 @@
       display: block;
       width: 100%;
       height: 100%;
-      box-shadow: -50px 0 50px -23px rgba(0, 0, 0, 0.5) inset, 50px 0 50px -23px rgba(0, 0, 0, 0.5) inset;
+      box-shadow: -50px 0 50px 23px rgba(0, 0, 0, 0.5) inset, 50px 0 50px 23px rgba(0, 0, 0, 0.5) inset;
       position: absolute;
       top: 0;
       z-index: 10;
@@ -73,43 +73,56 @@
       font-weight: bold;
     }
   }
-  &__button-next {
-  }
   &__content {
-    padding: rem(20) rem(17) rem(19) rem(20);
+    padding: 20px 17px 19px 20px;
   }
   &__head {
     display: flex;
     justify-content: space-between;
     align-items: flex-end;
     @include MontBold;
-    margin-bottom: rem(15);
-    line-height: rem(17);
-    padding-bottom: rem(12);
+    margin-bottom: 15px;
+    line-height: 17px;
+    padding-bottom: 12px;
     border-bottom: 1px solid rgba(31, 32, 65, 0.1);
-    margin-bottom: rem(12);
+    margin-bottom: 12px;
   }
   &__number {
-    font-size: rem(14);
+    font-size: 14px;
   }
   &__head-num {
-    font-size: rem(19);
-    line-height: rem(23);
+    font-size: 19px;
+    line-height: 23px;
+    @media (max-width: $phoneWidth) {
+      font-size: 15px;
+      line-height: 18px;
+    }
   }
   &__type {
-    font-size: rem(14);
-    line-height: rem(15);
+    font-size: 14px;
+    line-height: 15px;
     color: $purple;
+    @media (max-width: $phoneWidth) {
+      font-size: 12px;
+      line-height: 10px;
+    }
   }
   &__head-price {
     @include Mont;
-    font-size: rem(12);
+    font-size: 12px;
     color: $ds50;
-    line-height: rem(18);
+    line-height: 18px;
+    @media (max-width: $phoneWidth) {
+      font-size: 10px;
+      line-height: 15px;
+    }
   }
   &__head-sum {
-    font-size: rem(14);
+    font-size: 14px;
     @include MontBold;
+    @media (max-width: $phoneWidth) {
+      font-size: 12px;
+    }
   }
   &__bottom {
     display: flex;
@@ -117,9 +130,12 @@
     align-items: center;
   }
   &__reviews {
-    font-size: rem(14);
+    font-size: 14px;
     color: $ds50;
     @include Mont;
+    @media (max-width: $phoneWidth) {
+      font-size: 12px;
+    }
   }
   &__reviews-num {
     @include MontBold;
