--- a/src/blocks/card-selection/card-selection.scss
+++ b/src/blocks/card-selection/card-selection.scss
@@ -1,33 +1,43 @@
 .card-selection {
   background-color: $white;
-  box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 0 25px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   border: 1px solid rgba(0, 0, 0, 0.12);
   max-width: 380px;
+  width: 100%;
   @media (max-width: $phoneWidth) {
     max-width: 100%;
     margin: 0 auto;
   }
   &__content {
-    padding: rem(40) rem(30) rem(30);
+    padding: 40px 30px 30px;
     @media (max-width: $phoneWidth) {
       max-width: 320px;
+      padding: 30px 20px 30px;
     }
   }
   &__title {
     @include MontBold;
-    font-size: rem(24);
-    line-height: rem(29);
+    font-size: 24px;
+    line-height: 29px;
     text-transform: initial;
     display: inline-block;
-    margin-bottom: rem(20);
+    margin-bottom: 20px;
+    @media (max-width: $phoneWidth) {
+      font-size: 20px;
+      line-height: 25px;
+      margin-bottom: 15px;
+    }
   }
   &__block {
     &_margin-b-15 {
-      margin-bottom: rem(15);
+      margin-bottom: 15px;
+      @media (max-width: $phoneWidth) {
+        margin-bottom: 0;
+      }
     }
     &_margin-b-30 {
-      margin-bottom: rem(30);
+      margin-bottom: 30px;
     }
   }
 }
