--- a/src/blocks/card-singin/card-singin.scss
+++ b/src/blocks/card-singin/card-singin.scss
@@ -1,31 +1,34 @@
 .card-singin {
   background-color: $white;
   max-width: 380px;
-  min-width: 380px;
+  width: 100%;
   border-radius: 4px;
   border: 1px solid rgba(0, 0, 0, 0.12);
-  box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 0 25px rgba(0, 0, 0, 0.2);
   @media (max-width: $phoneWidth) {
-    min-width: 300px;
   }
   &__content {
-    padding: rem(40) rem(30) rem(30) rem(30);
+    padding: 40px 30px 30px 30px;
   }
   &__title {
     @include MontBold;
-    font-size: rem(24);
-    margin-bottom: rem(20);
+    font-size: 24px;
+    margin-bottom: 20px;
+    @media (max-width: $phoneWidth) {
+      font-size: 20px;
+      margin-bottom: 10px;
+    }
   }
   &__item {
     &_margin-b-10 {
-      margin-bottom: rem(10);
+      margin-bottom: 10px;
     }
     &_margin-b-30 {
-      margin-bottom: rem(20);
+      margin-bottom: 20px;
     }
   }
   &__button-in {
-    margin-bottom: rem(30);
+    margin-bottom: 30px;
   }
   &__check-in {
     display: flex;
@@ -33,6 +36,10 @@
     align-items: center;
   }
   &__check-in-text {
-    font-size: rem(14);
+    font-size: 14px;
+    max-width: 150px;
+    @media (max-width: $phoneWidth) {
+      font-size: 12px;
+    }
   }
 }
