--- a/src/blocks/cards-page/cards-page.scss
+++ b/src/blocks/cards-page/cards-page.scss
@@ -4,10 +4,10 @@
   height: 100%;
   min-height: 100vh;
   &__content {
-    padding-top: rem(150);
-    padding-bottom: rem(140);
+    padding-top: 150px;
+    padding-bottom: 140px;
   }
   &__card {
-    margin-bottom: rem(40);
+    margin-bottom: 40px;
   }
 }
