--- a/src/blocks/circle-diagram/circle-diagram.scss
+++ b/src/blocks/circle-diagram/circle-diagram.scss
@@ -1,8 +1,3 @@
-// #CircleDiagram {
-//   width: rem(120);
-//   height: rem(120);
-// }
-
 .circle-diagram {
   display: flex;
   align-items: flex-end;
@@ -13,32 +8,37 @@
     width: 135px;
     height: 135px;
     position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
   &__voices {
     position: absolute;
     white-space: pre-wrap;
     text-align: center;
-    left: calc(50% - 39px);
-    top: calc(50% - 17.5px);
     max-width: 70px;
     max-height: 35px;
-    font-size: rem(16);
-    line-height: rem(15);
+    font-size: 16px;
+    line-height: 15px;
     color: $purple;
     @include MontBold;
     i {
-      font-size: rem(24);
-      line-height: rem(29);
+      font-size: 24px;
+      line-height: 29px;
       font-style: normal;
     }
   }
   &__list {
     display: block;
     max-width: 180px;
-    margin-left: rem(20);
-    font-size: rem(14);
-    line-height: rem(24);
+    margin-left: 20px;
+    font-size: 14px;
+    line-height: 24px;
     color: $ds75;
+    @media (max-width: $phoneWidth) {
+      font-size: 12px;
+      line-height: 20px;
+    }
   }
   &__list-item {
     display: flex;
@@ -72,8 +72,8 @@
       min-height: 10px;
       max-height: 10px;
       border-radius: 50%;
-      margin-right: rem(5);
-      margin-top: rem(5);
+      margin-right: 5px;
+      margin-top: 5px;
     }
   }
 }
