--- a/src/blocks/dropdown-choose/dropdown-choose.scss
+++ b/src/blocks/dropdown-choose/dropdown-choose.scss
@@ -1,28 +1,39 @@
 .dropdown-choose {
   border: $border;
-  border-radius: rem(4);
-  font-size: rem(14);
+  border-radius: 4px;
+  font-size: 14px;
   user-select: none;
   transition: $trFast;
   position: relative;
+  @media (max-width: $phoneWidth) {
+    font-size: 12px;
+  }
   &:hover {
+    border: $borderHover;
+  }
+  &:focus {
     border: $borderHover;
   }
   &_active {
     border: $borderHover;
-    box-shadow: 0px 10px 20px rgba(31, 32, 65, 0.05);
+    box-shadow: 0 10px 20px rgba(31, 32, 65, 0.05);
   }
   &__title {
     text-transform: uppercase;
     font-family: 'MontserratBold', Arial, sans-serif;
-    font-size: rem(12);
+    font-size: 12px;
+    @media (max-width: $phoneWidth) {
+      font-size: 10px;
+    }
   }
   &__upper-field {
     padding: 12px 15px;
     position: relative;
     color: $ds75;
-    line-height: rem(18);
+    line-height: 18px;
     font-family: 'MontserratMedium', Arial, sans-serif;
+    background-color: #fff;
+    border-radius: 4px;
     cursor: pointer;
     &_active {
       border-bottom: 1px solid $ds75;
@@ -34,7 +45,7 @@
     border-bottom: 2px solid $ds50;
     width: 8px;
     height: 8px;
-    right: rem(17);
+    right: 17px;
     top: calc(50% - 8px);
     transform: rotate(-45deg);
     transition: $trFast;
@@ -56,8 +67,8 @@
     border: $borderHover;
     border-bottom: none;
     border-top: none;
-    border-bottom-left-radius: rem(4);
-    border-bottom-right-radius: rem(4);
+    border-bottom-left-radius: 4px;
+    border-bottom-right-radius: 4px;
     width: calc(100% + 2px);
     &_active {
       border-top: $borderHover;
@@ -76,14 +87,17 @@
   }
   &__item-count {
     font-family: 'MontserratBold', Arial, sans-serif;
-    font-size: rem(12);
+    font-size: 12px;
   }
   &__item-text {
     font-family: 'MontserratBold', Arial, sans-serif;
     text-transform: uppercase;
-    font-size: rem(12);
+    font-size: 12px;
     max-width: 50%;
     line-height: 15px;
+    @media (max-width: $phoneWidth) {
+      font-size: 10px;
+    }
   }
   &__count-block {
     display: flex;
@@ -94,8 +108,8 @@
 
   &__plus,
   &__minus {
-    width: rem(30);
-    height: rem(30);
+    width: 30px;
+    height: 30px;
     border: $borderHover;
     border-radius: 50%;
     display: flex;
@@ -113,7 +127,10 @@
     padding: 14px 7px 15px 7px;
     text-transform: uppercase;
     font-family: 'MontserratBold', Arial, sans-serif;
-    font-size: rem(12);
+    font-size: 12px;
+    @media (max-width: $phoneWidth) {
+      font-size: 10px;
+    }
   }
   &__btn-clear {
     cursor: pointer;
