--- a/src/blocks/expand-list/expand-list.scss
+++ b/src/blocks/expand-list/expand-list.scss
@@ -5,27 +5,32 @@
   cursor: pointer;
   $self: &;
   &__title {
-    display: block;
-    font-size: rem(12);
-    position: relative;
-    &:before {
+    display: flex;
+    font-size: 12px;
+    justify-content: space-between;
+    align-items: center;
+    &:after {
       content: '';
       display: block;
-      width: 8px;
+      width: 12px;
       height: 8px;
-      border: 2px solid $ds50;
-      border-top: none;
-      border-left: none;
-      transform: rotate(45deg);
-      position: absolute;
-      right: 6%;
-      top: calc(50% - 5px);
+      opacity: 0.7;
+      background-image: url('assets/img/expand-more.svg');
+      background-repeat: no-repeat;
+      background-position: center;
       transition: $trFast;
+      margin-right: 20px;
+      @media (max-width: $phoneWidth) {
+        margin-right: 10px;
+      }
+      @media (max-width: $phoneWidth) {
+        font-size: 10px;
+      }
     }
     &_active {
-      margin-bottom: rem(20);
-      &:before {
-        transform: rotate((225deg));
+      margin-bottom: 20px;
+      &:after {
+        transform: rotate(180deg);
       }
     }
   }
@@ -42,7 +47,7 @@
     }
   }
   &__item {
-    padding-bottom: rem(10);
+    padding-bottom: 10px;
     display: flex;
     align-items: flex-start;
     &:last-child {
@@ -57,13 +62,23 @@
     min-height: 20px;
     border: $border;
     border-radius: 4px;
-    margin-right: rem(10);
+    margin-right: 10px;
+
+    &:focus {
+      border: $borderHover;
+    }
+    @media (max-width: $phoneWidth) {
+      margin-right: 5px;
+    }
   }
   &__text {
-    font-size: rem(14);
+    font-size: 14px;
     color: $ds50;
-    line-height: rem(18);
+    line-height: 20px;
     white-space: pre-wrap;
+    @media (max-width: $phoneWidth) {
+      font-size: 12px;
+    }
   }
   &__checkbox {
     display: none;
