--- a/src/blocks/filter-date/filter-date.scss
+++ b/src/blocks/filter-date/filter-date.scss
@@ -4,15 +4,10 @@
   &__label {
     position: relative;
   }
-  &__title {
-    text-transform: uppercase;
-    font-size: rem(12);
-    font-family: 'MontserratBold', sans-serif;
-  }
   &__input {
-    font-size: rem(14);
+    font-size: 14px;
     border: $border;
-    border-radius: rem(4);
+    border-radius: 4px;
     padding: 12px 15px;
     transition: $trFast;
     min-width: 266px;
@@ -25,14 +20,21 @@
     &:hover {
       border: $borderHover;
     }
+    @media (max-width: $phoneWidth) {
+      font-size: 12px;
+    }
   }
   &__arrow {
     max-width: 12px;
     min-width: 12px;
-    max-height: 12px;
+    min-height: 12px;
     position: absolute;
     right: 15px;
     top: calc(50% + 10px);
     fill: $ds50;
+    background-image: url('assets/img/expand-more.svg');
+    background-repeat: no-repeat;
+    background-position: center;
+    opacity: 0.7;
   }
 }
