--- a/src/blocks/footer/footer.scss
+++ b/src/blocks/footer/footer.scss
@@ -1,16 +1,20 @@
 .footer {
   $self: &;
   background-color: #fff;
-  box-shadow: 0px 10px 20px rgba(31, 32, 65, 0.05);
+  box-shadow: 0 10px 20px rgba(31, 32, 65, 0.05);
   color: $ds75;
-  font-size: rem(14);
+  font-size: 14px;
   white-space: pre-wrap;
   @media (max-width: $smDesktopWidth) {
-    padding: rem(120) 0;
+    padding: 120px 0;
+  }
+  @media (max-width: $phoneWidth) {
+    font-size: 12px;
+    padding: 50px;
   }
   &__content {
-    padding-top: rem(100);
-    padding-bottom: rem(140);
+    padding-top: 100px;
+    padding-bottom: 140px;
     display: flex;
     justify-content: space-between;
     @media (max-width: $smDesktopWidth) {
@@ -26,13 +30,13 @@
     }
   }
   &__logo {
-    margin-bottom: rem(20);
+    margin-bottom: 20px;
     @media (max-width: $smDesktopWidth) {
       margin-bottom: 0;
     }
   }
   &__achivement {
-    line-height: rem(24);
+    line-height: 24px;
     white-space: pre-wrap;
     @media (max-width: $smDesktopWidth) {
       display: none;
@@ -45,7 +49,7 @@
     }
   }
   &__list-item {
-    margin-bottom: rem(20);
+    margin-bottom: 20px;
     &:last-child {
       margin-bottom: 0;
     }
@@ -60,24 +64,24 @@
     }
   }
   &__subscribe-title {
-    margin-bottom: rem(20);
+    margin-bottom: 20px;
   }
   &__subscribe-text {
-    line-height: rem(24);
+    line-height: 24px;
     white-space: pre-wrap;
   }
   &__basement {
     border-top: 1px solid rgba(31, 32, 65, 0.1);
     @media (max-width: $smDesktopWidth) {
       border: none;
-      padding-top: rem(20);
+      padding-top: 20px;
     }
   }
   &__basement-content {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: rem(23) 0;
+    padding: 23px 0;
     @media (max-width: $smDesktopWidth) {
       display: block;
       text-align: center;
@@ -85,16 +89,16 @@
     }
   }
   &__copyright {
-    line-height: rem(17);
+    line-height: 17px;
   }
   &__social {
     @media (max-width: $smDesktopWidth) {
-      margin-top: rem(20);
+      margin-top: 20px;
     }
   }
   &__social-link {
     display: inline-block;
-    margin-right: rem(20);
+    margin-right: 20px;
     &:last-child {
       margin-right: 0;
     }
