--- a/src/blocks/header/header.scss
+++ b/src/blocks/header/header.scss
@@ -1,14 +1,18 @@
 .header {
   $self: &;
   background-color: $white;
-  box-shadow: 0px 10px 20px rgba(31, 32, 65, 0.05);
+  box-shadow: 0 10px 20px rgba(31, 32, 65, 0.05);
   position: relative;
   &__content {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding-top: rem(15);
-    padding-bottom: rem(15);
+    padding-top: 15px;
+    padding-bottom: 15px;
+    @media (max-width: $phoneWidth) {
+      padding-top: 5px;
+      padding-bottom: 5px;
+    }
   }
   &__nav-shadow {
     position: absolute;
@@ -51,20 +55,20 @@
       }
       #{$self}__list {
         display: block;
-        margin-bottom: rem(10);
+        margin-bottom: 10px;
         text-align: center;
       }
       #{$self}__list-item {
         display: flex;
         align-items: center;
         justify-content: center;
-        padding: rem(20) 0;
+        padding: 20px 0;
         margin: 0;
-        border-radius: rem(2);
+        border-radius: 2px;
         transition: $trFast;
         &:after {
-          margin-left: rem(10);
-          margin-bottom: rem(4);
+          margin-left: 10px;
+          margin-bottom: 4px;
         }
         &:hover {
           background-color: $purple;
@@ -75,8 +79,11 @@
       }
       #{$self}__link {
         display: inline-block;
-        font-size: rem(18);
+        font-size: 18px;
         vertical-align: center;
+        @media (max-width: $phoneWidth) {
+          font-size: 16px;
+        }
       }
       #{$self}__buttons {
         display: flex;
@@ -85,14 +92,14 @@
       }
       #{$self}__button {
         display: inline-block;
-        margin-bottom: rem(20);
+        margin-bottom: 20px;
       }
       #{$self}__cabinet {
         display: inline-block;
         min-width: 50%;
         border: none;
         border-top: 1px solid rgba(31, 32, 65, 0.1);
-        padding: rem(20) rem(10);
+        padding: 20px 10px;
       }
     }
   }
@@ -101,10 +108,10 @@
   }
   &__list-item {
     display: inline-flex;
-    margin-right: rem(20);
+    margin-right: 10px;
     cursor: pointer;
     &_dropdown {
-      margin-right: rem(25);
+      margin-right: 25px;
       &:after {
         content: '';
         display: inline-block;
@@ -116,19 +123,19 @@
         border-top: none;
         border-left: none;
         transform: rotate(45deg);
-        margin-left: rem(10);
-        margin-top: rem(4);
+        margin-left: 10px;
+        margin-top: 4px;
       }
     }
   }
   &__link {
-    font-size: rem(14);
-    line-height: rem(17);
+    font-size: 14px;
+    line-height: 17px;
     color: $ds50;
   }
   &__button {
-    margin-right: rem(20);
-    padding: rem(10) rem(20);
+    margin-right: 20px;
+    padding: 10px 20px;
     @media (max-width: $smDesktopWidth) {
       margin-right: 0;
     }
@@ -141,7 +148,10 @@
     line-height: 17px;
     color: $ds50;
     border-left: 1px solid rgba(31, 32, 65, 0.1);
-    padding: rem(10) 0 rem(10) rem(20);
+    padding: 10px 0 10px 20px;
+    @media (max-width: $phoneWidth) {
+      font-size: 12px;
+    }
   }
   &__burger {
     cursor: pointer;
@@ -151,8 +161,8 @@
     background-color: $purple;
     position: relative;
     z-index: 10;
-    border-radius: rem(50);
-    margin-left: rem(30);
+    border-radius: 50px;
+    margin-left: 30px;
     &:after {
       content: '';
       display: block;
@@ -160,9 +170,9 @@
       height: 3px;
       background-color: $purple;
       position: absolute;
-      top: rem(-9);
+      top: -9px;
       z-index: 10;
-      border-radius: rem(50);
+      border-radius: 50px;
     }
     &:before {
       content: '';
@@ -173,7 +183,7 @@
       position: absolute;
       top: 8px;
       z-index: 10;
-      border-radius: rem(50);
+      border-radius: 50px;
     }
     &_active {
       height: 30px;
