--- a/src/blocks/radio-buttons/radio-buttons.scss
+++ b/src/blocks/radio-buttons/radio-buttons.scss
@@ -4,27 +4,24 @@
   align-items: center;
   position: relative;
   cursor: pointer;
-  font-size: rem(14);
+  font-size: 14px;
   &:last-child {
     margin-right: 0;
+  }
+  @media (max-width: $phoneWidth) {
+    font-size: 12px;
   }
   &__label {
     display: inline-flex;
     align-items: center;
-    margin-right: rem(20);
+    margin-right: 20px;
     &:last-child {
       margin-right: 0;
     }
   }
-  &__title {
-    text-transform: uppercase;
-    font-family: 'MontserratBold', Arial, sans-serif;
-    font-size: rem(12);
-    color: $ds100;
-  }
   &__input {
     position: absolute;
-    opacity: 0;
+    visibility: hidden;
     cursor: pointer;
     &:checked ~ #{$self}__checkmark {
       border-color: $purple;
@@ -43,18 +40,27 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    max-height: 20px;
+    max-width: 20px;
     height: 20px;
     width: 20px;
     background-color: #fff;
     border: 1px solid $ds25;
     border-radius: 50%;
     margin-right: 10px;
+    @media (max-width: $phoneWidth) {
+      margin-right: 5px;
+    }
+    &:focus {
+      border: $borderHover;
+    }
     &:after {
       content: '';
       display: block;
       opacity: 0;
-      width: 12px;
-      height: 12px;
+      width: 14px;
+      height: 14px;
+      max-width: 14px;
       border-radius: 50%;
       background: $purpleGr;
       transition: $trFast;
