--- a/src/blocks/rich-list/rich-list.scss
+++ b/src/blocks/rich-list/rich-list.scss
@@ -4,7 +4,7 @@
   user-select: none;
   cursor: pointer;
   &__li {
-    margin-bottom: rem(10);
+    margin-bottom: 10px;
     &:last-child {
       margin-bottom: 0;
     }
@@ -19,21 +19,31 @@
     min-height: 20px;
     border: $border;
     border-radius: 4px;
-    margin-right: rem(10);
+    margin-right: 10px;
+    &:focus {
+      border: $borderHover;
+    }
   }
   &__head {
     @include MontBold;
     color: $ds75;
     text-transform: uppercase;
-    font-size: rem(12);
+    font-size: 12px;
     white-space: pre;
-    line-height: rem(18);
+    line-height: 18px;
+    @media (max-width: $phoneWidth) {
+      font-size: 10px;
+    }
   }
   &__description {
-    font-size: rem(12);
+    font-size: 12px;
     color: $ds50;
-    line-height: rem(14);
+    line-height: 14px;
     white-space: pre-wrap;
+    @media (max-width: $phoneWidth) {
+      font-size: 10px;
+      line-height: 12px;
+    }
   }
   input {
     display: none;
