--- a/src/main.scss
+++ b/src/main.scss
@@ -1,5 +1,4 @@
 @import 'utils/utils-scss/fonts';
-@import 'utils/utils-scss/libs';
 @import 'utils/utils-scss/vars';
 @import 'utils/utils-scss/mixins';
 @import 'utils/utils-scss/reset';
@@ -34,6 +33,9 @@ body {
 *:before,
 *:after {
   box-sizing: border-box;
+  &:focus {
+    border: $borderHover;
+  }
 }
 
 h1,
@@ -75,7 +77,7 @@ button {
 input,
 label {
   cursor: pointer;
-  line-height: rem(15);
+  line-height: 15px;
 }
 input {
   text-shadow: none;
@@ -118,59 +120,25 @@ section,
   }
   @media screen and (max-width: $mdDesktopWidth) {
     max-width: $smDesktopWidth;
-    padding: 0 rem(10);
+    padding: 0 10px;
   }
   @media screen and (max-width: $smDesktopWidth) {
     width: 100%;
   }
   @media (min-width: $phoneWidth) and (max-width: $tableWidth) {
     width: 100%;
-    padding: 0 1rem;
+    padding: 0 18px;
   }
   @media (min-width: $smPhoneWidth) and (max-width: $phoneWidth) {
     max-width: 100vw;
-    padding: 0 rem(10);
+    padding: 0 10px;
   }
-}
-.row {
-  @media (min-width: $phoneWidth) and (max-width: $tableWidth) {
-    grid-template-columns: repeat(2, 1fr);
-  }
-  @media (min-width: $smPhoneWidth) and (max-width: $phoneWidth) {
-    grid-template-columns: 1fr;
-  }
-
-  @media screen and (max-width: $smPhoneWidth) {
-    grid-template-columns: 1fr;
-  }
-}
-
-.last {
-  display: grid;
-  grid-template-columns: 1fr 2fr;
-  grid-gap: 1rem;
-
-  @media (min-width: $phoneWidth) and (max-width: $tableWidth) {
-    grid-template-columns: 1fr 1fr;
-  }
-  @media screen and (max-width: $phoneWidth) {
-    grid-template-columns: 1fr;
-  }
-}
-
-.validate-error {
-  font-size: rem(12);
-  color: $danger-color;
-}
-.stop-scrolling {
-  width: 100%;
-  height: 100%;
-  // position: fixed;
-  overflow: hidden;
 }
 
 // Modules
 @import './blocks/svg-icons/svg-icons';
+@import './blocks/validate-error/validate-error';
+@import './blocks/stop-scrolling/stop-scrolling';
 @import './blocks/logo/logo';
 @import './blocks/ui-kit/ui-kit';
 @import './blocks/block-title/block-title';
