--- a/src/utils/utils-scss/button.scss
+++ b/src/utils/utils-scss/button.scss
@@ -6,12 +6,19 @@
   color: $white;
   text-transform: uppercase;
   @include MontBold;
-  font-size: rem(12);
+  font-size: 12px;
   transition: $trFast;
   cursor: pointer;
   line-height: 1;
+  box-sizing: content-box;
+  @media (max-width: $phoneWidth) {
+    font-size: 10px;
+  }
   &:hover {
     opacity: 0.5;
+  }
+  &:focus {
+    border: $borderHover;
   }
   &_subscribe {
     position: absolute;
@@ -24,35 +31,21 @@
     position: relative;
     width: 100%;
     max-width: 320px;
+    overflow: hidden;
     &:hover {
       opacity: 0.9;
     }
-    @media screen and (max-width: $phoneWidth) {
-      max-width: 320px;
-    }
-    width: 100%;
     &:after {
       content: '';
       display: block;
-      width: 14px;
-      height: 2px;
-      background-color: #fff;
+      background-image: url('assets/img/arrow-forward.svg');
+      background-repeat: no-repeat;
+      background-position: center;
       position: absolute;
-      right: 5%;
-      top: 50%;
-    }
-    &:before {
-      content: '';
-      display: block;
-      width: 12px;
-      height: 12px;
-      border: 2px solid $white;
-      border-bottom: none;
-      border-left: none;
-      transform: rotate(45deg);
-      position: absolute;
-      right: 5%;
-      top: calc(50% - 5.5px);
+      right: 10px;
+      top: 0;
+      width: 20px;
+      min-height: 100%;
     }
   }
   &_white {
@@ -65,8 +58,11 @@
     transition: $trFast;
     color: $purple;
     border: none;
-    font-size: rem(12);
+    font-size: 12px;
     background: none;
+    @media (max-width: $phoneWidth) {
+      font-size: 10px;
+    }
     &:before {
       content: '';
       position: absolute;
@@ -116,6 +112,6 @@
     }
   }
   &_margin-r {
-    margin-right: 19px;
+    margin-bottom: 19px;
   }
 }
