--- a/src/utils/utils-scss/mixins.scss
+++ b/src/utils/utils-scss/mixins.scss
@@ -1,19 +1,3 @@
-// px to rem
-@function rem($pixels, $context: $mainFontSize) {
-  @if (unitless($pixels)) {
-    $pixels: $pixels * 1px;
-  }
-  @if (unitless($context)) {
-    $context: $context * 1px;
-  }
-  @return $pixels / $context * 1rem;
-}
-
-@mixin size($width, $height: $width) {
-  width: $width;
-  height: $height;
-}
-
 @mixin placeholder {
   ::-webkit-input-placeholder {
     @content;
@@ -38,4 +22,13 @@
 }
 @mixin MontBold {
   font-family: 'MontserratBold', Arial, sans-serif;
+}
+@mixin MontMedium {
+  font-family: 'MontserratMedium', Arial, sans-serif;
+}
+@mixin OsBold {
+  font-family: 'OpenSansBold', Arial, sans-serif;
+}
+@mixin Os {
+  font-family: 'OpenSans', Arial, sans-serif;
 }
