fix sam sass syntax error

--- a/src/blocks/header/header.scss
+++ b/src/blocks/header/header.scss
@@ -144,7 +144,7 @@
     }
   }
   &__cabinet {
-    font-size;
+    font-size: 14px;
     line-height: 17px;
     color: $ds50;
     border-left: 1px solid rgba(31, 32, 65, 0.1);
