--- a/src/pages/sign-in-page.pug
+++ b/src/pages/sign-in-page.pug
@@ -17,10 +17,11 @@ block head
 
 block content
   +header({isEntered: false})
-  .sing-in-page
-    .container
-      main.sing-in-page__main
-        +card-singin()
+  .content
+    .sing-in-page
+      .container
+        main.sing-in-page__main
+          +card-singin()
   +footer()
 
 
