--- a/src/blocks/Registration-page/Registration-page.scss
+++ b/src/blocks/Registration-page/Registration-page.scss
@@ -5,7 +5,7 @@
   background-origin: content-box;
   background-position: center;
   &__main {
-    margin: 20px 0;
+    padding: 20px 0;
     display: flex;
     justify-content: center;
   }
