--- a/src/blocks/card-selection/card-selection.scss
+++ b/src/blocks/card-selection/card-selection.scss
@@ -6,13 +6,13 @@
   max-width: 380px;
   width: 100%;
   @media (max-width: $phoneWidth) {
-    max-width: 100%;
+    max-width: 320px;
     margin: 0 auto;
   }
   &__content {
     padding: 40px 30px 30px;
     @media (max-width: $phoneWidth) {
-      max-width: 320px;
+      // max-width: 320px;
       padding: 30px 20px 30px;
     }
   }
