--- a/src/blocks/landing-page/landing-page.scss
+++ b/src/blocks/landing-page/landing-page.scss
@@ -1,11 +1,16 @@
 .landing-page {
   background-image: url('assets/img/landing-page-bg.jpg');
-  background-size: cover;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   background-repeat: no-repeat;
-  background-origin: content-box;
   background-position: center;
+  min-height: calc(100vh - 20px);
+  padding-top: 70px;
+  @media (min-width: $smDesktopWidth) {
+    background-size: cover;
+  }
   &__main {
-    margin: 70px 0 386px;
     display: flex;
     justify-content: space-between;
   }
