--- a/src/blocks/sing-in-page/sing-in-page.scss
+++ b/src/blocks/sing-in-page/sing-in-page.scss
@@ -5,7 +5,7 @@
   background-origin: content-box;
   background-position: center;
   &__main {
-    margin: 163px 0;
+    padding: 163px 0;
     display: flex;
     justify-content: center;
   }
