--- a/src/pages/Landing-page.pug
+++ b/src/pages/Landing-page.pug
@@ -15,14 +15,15 @@ block head
 
 block content
   +header({isEntered: false})
-  .landing-page
-    .container
-      main.landing-page__main
-        +card-selection()
-    .container
-      p.landing-page__description
-        | Лучшие номера для вашей работы,
-        | отдыха и просто вдохновения
+  .content
+    .landing-page
+      .container
+        main.landing-page__main
+          +card-selection()
+      .container
+        p.landing-page__description
+          | Лучшие номера для вашей работы,
+          | отдыха и просто вдохновения
   +footer()
 
 
