--- a/src/pages/registration-page.pug
+++ b/src/pages/registration-page.pug
@@ -19,10 +19,11 @@ block head
   
 block content
   +header({isEntered: false})
-  .registration-page
-    .container
-      main.registration-page__main
-        +card-checkin()
+  .content
+    .registration-page
+      .container
+        main.registration-page__main
+          +card-checkin()
   +footer()
 
 
