--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -54,6 +54,7 @@ block content
               +date-dropdown({className: 'js-date-masked', 
               title: 'date dropdown', 
               titleSecond: 'date dropdown'})
+              span.block-title filter date dropdown
               +filter-date({className: 'js-filter-date', title: 'filter date dropdown'})
               +subscription({title: 'subscription', placeholder: 'Email'})
               span.block-title dropdown
