--- a/src/blocks/dropdown-choose/dropdown-choose.scss
+++ b/src/blocks/dropdown-choose/dropdown-choose.scss
@@ -35,9 +35,6 @@
     background-color: #fff;
     border-radius: 4px;
     cursor: pointer;
-    &_active {
-      border-bottom: 1px solid $ds75;
-    }
   }
   &__arrow {
     position: absolute;
@@ -60,9 +57,11 @@
     left: -1px;
     width: 100%;
     z-index: 100;
+    opacity: 0;
     max-height: 0;
     overflow: hidden;
-    transition: max-height $trFast;
+    transition: opacity $trFast;
+    transition-timing-function: ease-in-out;
     background-color: #fff;
     border: $borderHover;
     border-bottom: none;
@@ -74,6 +73,7 @@
       border-top: $borderHover;
       border-bottom: $borderHover;
       max-height: 500px;
+      opacity: 1;
     }
   }
   &__item {
