--- a/src/blocks/expand-list/expand-list.scss
+++ b/src/blocks/expand-list/expand-list.scss
@@ -20,6 +20,7 @@
       background-position: center;
       transition: $trFast;
       margin-right: 20px;
+      margin-bottom: 0;
       @media (max-width: $phoneWidth) {
         margin-right: 10px;
       }
@@ -28,7 +29,6 @@
       }
     }
     &_active {
-      margin-bottom: 20px;
       &:after {
         transform: rotate(180deg);
       }
@@ -40,6 +40,7 @@
     overflow: hidden;
     transition: $trFast;
     &_active {
+      padding-top: 10px;
       max-height: 1000px;
     }
     label {
