--- a/src/blocks/filter-date/filter-date.pug
+++ b/src/blocks/filter-date/filter-date.pug
@@ -1,6 +1,5 @@
-mixin filter-date({className, title})
+mixin filter-date({className})
   .filter-date
     label.filter-date__label
-      span.block-title #{title}
       input(type="text" placeholder="от и до" class=className readonly required).filter-date__input.js-filter-date__input
       div.filter-date__arrow
