--- a/src/blocks/filter-date/filter-date.scss
+++ b/src/blocks/filter-date/filter-date.scss
@@ -30,7 +30,7 @@
     min-height: 12px;
     position: absolute;
     right: 15px;
-    top: calc(50% + 0.556rem);
+    top: calc(50% - 6px);
     fill: $ds50;
     background-image: url('assets/img/expand-more.svg');
     background-repeat: no-repeat;
