--- a/src/blocks/filter-page/filter-page.scss
+++ b/src/blocks/filter-page/filter-page.scss
@@ -5,6 +5,7 @@
   &__content {
     padding: 30px 0 70px;
     display: flex;
+    justify-content: center;
     @media (max-width: $smDesktopWidth) {
       display: flex;
       flex-direction: column;
@@ -47,12 +48,9 @@
   }
   &__rooms {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
     grid-row-gap: 20px;
     grid-column-gap: 12px;
-    @media (max-width: $desktopWidth) {
-      grid-template-columns: 1fr 1fr 1fr;
-    }
     @media (max-width: $mdDesktopWidth) {
       grid-template-columns: 1fr 1fr;
     }
