--- a/src/pages/filter-page.pug
+++ b/src/pages/filter-page.pug
@@ -31,6 +31,8 @@ block content
           .filter-page__content
             form.filter-page__form
               .filter-page__form-block.filter-page__form-block_margin-20
+                span.block-title
+                  | Даты пребывания в отеле
                 +filter-date({className: '', title: 'Даты пребывания в отеле'})
               .filter-page__form-block.filter-page__form-block_margin-30
                 span.block-title
