--- a/src/pages/filter-page/filter-page.pug
+++ b/src/pages/filter-page/filter-page.pug
@@ -1,21 +1,21 @@
 extends ../main
 
-include ../blocks/header/header
-include ../blocks/footer/footer
-include ../blocks/subscription/subscription
-include ../blocks/textField/textField
-include ../blocks/radio-buttons/radio-buttons
-include ../blocks/card-singin/card-singin
-include ../blocks/date-dropdown/date-dropdown
-include ../blocks/dropdown-choose/dropdown-choose
-include ../blocks/filter-date/filter-date
-include ../blocks/range-slider/range-slider
-include ../blocks/checkbox-buttons/checkbox-buttons
-include ../blocks/rich-list/rich-list
-include ../blocks/expand-list/expand-list
-include ../blocks/card-room/card-room
-include ../blocks/rate-buttons/rate-buttons
-include ../blocks/pagination/pagination
+include ../../blocks/header/header
+include ../../blocks/footer/footer
+include ../../blocks/subscription/subscription
+include ../../blocks/textField/textField
+include ../../blocks/radio-buttons/radio-buttons
+include ../../blocks/card-singin/card-singin
+include ../../blocks/date-dropdown/date-dropdown
+include ../../blocks/dropdown-choose/dropdown-choose
+include ../../blocks/filter-date/filter-date
+include ../../blocks/range-slider/range-slider
+include ../../blocks/checkbox-buttons/checkbox-buttons
+include ../../blocks/rich-list/rich-list
+include ../../blocks/expand-list/expand-list
+include ../../blocks/card-room/card-room
+include ../../blocks/rate-buttons/rate-buttons
+include ../../blocks/pagination/pagination
 block head
   link(rel='apple-touch-icon' sizes='180x180' href='assets/favicons/apple-touch-icon.png')
   link(rel='icon' type='image/png' sizes='32x32' href='assets/favicons/favicon-32x32.png')
