--- a/src/pages/headers-&-footers/headers-&-footers.pug
+++ b/src/pages/headers-&-footers/headers-&-footers.pug
@@ -1,9 +1,9 @@
 extends ../main
 
-include ../blocks/textField/textField
-include ../blocks/subscription/subscription
-include ../blocks/header/header
-include ../blocks/footer/footer
+include ../../blocks/textField/textField
+include ../../blocks/subscription/subscription
+include ../../blocks/header/header
+include ../../blocks/footer/footer
 
 block head
   link(rel='apple-touch-icon' sizes='180x180' href='assets/favicons/apple-touch-icon.png')
