--- a/src/pages/index/index.pug
+++ b/src/pages/index/index.pug
@@ -1,24 +1,24 @@
 extends ../main
 
-include ../blocks/textField/textField.pug
-include ../blocks/masked-textfield/masked-textfield.pug
-include ../blocks/dropdown-choose/dropdown-choose.pug
-include ../blocks/date-dropdown/date-dropdown.pug
-include ../blocks/filter-date/filter-date.pug
-include ../blocks/subscription/subscription.pug
-include ../blocks/expand-list/expand-list.pug
-include ../blocks/checkbox-buttons/checkbox-buttons.pug
-include ../blocks/radio-buttons/radio-buttons.pug
-include ../blocks/toggle-buttons/toggle-buttons.pug
-include ../blocks/like-button/like-button
-include ../blocks/rate-buttons/rate-buttons
-include ../blocks/range-slider/range-slider
-include ../blocks/pagination/pagination
-include ../blocks/rich-list/rich-list
-include ../blocks/bullet-list/bullet-list
-include ../blocks/advantages/advantages
-include ../blocks/review/review
-include ../blocks/card-room/card-room
+include ../../blocks/textField/textField.pug
+include ../../blocks/masked-textfield/masked-textfield.pug
+include ../../blocks/dropdown-choose/dropdown-choose.pug
+include ../../blocks/date-dropdown/date-dropdown.pug
+include ../../blocks/filter-date/filter-date.pug
+include ../../blocks/subscription/subscription.pug
+include ../../blocks/expand-list/expand-list.pug
+include ../../blocks/checkbox-buttons/checkbox-buttons.pug
+include ../../blocks/radio-buttons/radio-buttons.pug
+include ../../blocks/toggle-buttons/toggle-buttons.pug
+include ../../blocks/like-button/like-button
+include ../../blocks/rate-buttons/rate-buttons
+include ../../blocks/range-slider/range-slider
+include ../../blocks/pagination/pagination
+include ../../blocks/rich-list/rich-list
+include ../../blocks/bullet-list/bullet-list
+include ../../blocks/advantages/advantages
+include ../../blocks/review/review
+include ../../blocks/card-room/card-room
 
 block head
   link(rel='apple-touch-icon' sizes='180x180' href='assets/favicons/apple-touch-icon.png')
