--- a/src/pages/registration-page/registration-page.pug
+++ b/src/pages/registration-page/registration-page.pug
@@ -1,15 +1,15 @@
 extends ../main
 
-include ../blocks/header/header
-include ../blocks/footer/footer
-include ../blocks/masked-textfield/masked-textfield
-include ../blocks/toggle-buttons/toggle-buttons
-include ../blocks/subscription/subscription
-include ../blocks/textField/textField
-include ../blocks/radio-buttons/radio-buttons
-include ../blocks/card-checkin/card-checkin
-include ../blocks/date-dropdown/date-dropdown
-include ../blocks/dropdown-choose/dropdown-choose
+include ../../blocks/header/header
+include ../../blocks/footer/footer
+include ../../blocks/masked-textfield/masked-textfield
+include ../../blocks/toggle-buttons/toggle-buttons
+include ../../blocks/subscription/subscription
+include ../../blocks/textField/textField
+include ../../blocks/radio-buttons/radio-buttons
+include ../../blocks/card-checkin/card-checkin
+include ../../blocks/date-dropdown/date-dropdown
+include ../../blocks/dropdown-choose/dropdown-choose
 
 block head
   link(rel='apple-touch-icon' sizes='180x180' href='assets/favicons/apple-touch-icon.png')
