--- a/src/pages/sign-in-page/sign-in-page.pug
+++ b/src/pages/sign-in-page/sign-in-page.pug
@@ -1,13 +1,13 @@
 extends ../main
 
-include ../blocks/header/header
-include ../blocks/footer/footer
-include ../blocks/subscription/subscription
-include ../blocks/textField/textField
-include ../blocks/radio-buttons/radio-buttons
-include ../blocks/card-singin/card-singin
-include ../blocks/date-dropdown/date-dropdown
-include ../blocks/dropdown-choose/dropdown-choose
+include ../../blocks/header/header
+include ../../blocks/footer/footer
+include ../../blocks/subscription/subscription
+include ../../blocks/textField/textField
+include ../../blocks/radio-buttons/radio-buttons
+include ../../blocks/card-singin/card-singin
+include ../../blocks/date-dropdown/date-dropdown
+include ../../blocks/dropdown-choose/dropdown-choose
 
 block head
   link(rel='apple-touch-icon' sizes='180x180' href='assets/favicons/apple-touch-icon.png')
